--- a/NotiShare-Mobile/NotiShare/Properties/AndroidManifest.xml
+++ b/NotiShare-Mobile/NotiShare/Properties/AndroidManifest.xml
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.fezz.notishare" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="18" android:targetSdkVersion="25" />
-	<uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="NotiShare" android:icon="@drawable/Icon"></application>
+	<application android:label="NotiShare" android:icon="@drawable/Icon">
+	<service android:name="com.fezz.notishare.NotificationService" android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" exported="false">
+		  <intent-filter>
+		    <action android:name="android.service.notification.NotificationListenerService" />
+		  </intent-filter>
+    </service>
+	</application>
 </manifest>
