--- a/NotiShare-Mobile/NotiShare/Properties/AndroidManifest.xml
+++ b/NotiShare-Mobile/NotiShare/Properties/AndroidManifest.xml
@@ -5,11 +5,11 @@
 	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="NotiShare" android:icon="@drawable/Icon">
-	<service android:name="com.fezz.notishare.NotificationService" android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" exported="false">
-		  <intent-filter>
-		    <action android:name="android.service.notification.NotificationListenerService" />
-		  </intent-filter>
-    </service>
+	<application android:icon="@drawable/Icon" android:label="@string/ApplicationName">
+		<service android:name="com.fezz.notishare.NotificationService" android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" exported="false">
+			<intent-filter>
+				<action android:name="android.service.notification.NotificationListenerService" />
+			</intent-filter>
+		</service>
 	</application>
 </manifest>
