--- a/NotiShare-Mobile/NotiShare/Properties/AndroidManifest.xml
+++ b/NotiShare-Mobile/NotiShare/Properties/AndroidManifest.xml
@@ -5,11 +5,18 @@
 	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<application android:icon="@drawable/Icon" android:label="@string/ApplicationName">
-		<service android:name="com.fezz.notishare.NotificationService" android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" exported="false">
+		<service android:name="com.fezz.notishare.NotificationService" android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" android:exported="false">
 			<intent-filter>
 				<action android:name="android.service.notification.NotificationListenerService" />
 			</intent-filter>
 		</service>
+		<service android:name="com.fezz.notishare.ClipboardService" android:exported="false"></service>
+		<receiver android:name="com.fezz.notishare.BoolComplete" android:exported="false">
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+			</intent-filter>
+		</receiver>
 	</application>
 </manifest>
