--- a/NotiShare-Mobile/NotiShare/NotiShare.csproj
+++ b/NotiShare-Mobile/NotiShare/NotiShare.csproj
@@ -118,6 +118,9 @@
     <Compile Include="BroadcastReceivers\BootReceiver.cs" />
     <Compile Include="Fragments\PreferenceFragment.cs" />
     <Compile Include="Activity\MainActivity.cs" />
+    <Compile Include="Helper\AppHelper.cs" />
+    <Compile Include="Helper\HashHelper.cs" />
+    <Compile Include="Helper\ValidationHelper.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ClipboardService.cs" />
