--- a/NotiShareModel/NotiShareModel.csproj
+++ b/NotiShareModel/NotiShareModel.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DataTypes\LoginObject.cs" />
     <Compile Include="DataTypes\RegistrationObject.cs" />
     <Compile Include="HttpWorker\HttpWorker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
