--- a/NotiShareModel/NotiShareModel.csproj
+++ b/NotiShareModel/NotiShareModel.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DataTypes\DeviceRegisterResult.cs" />
     <Compile Include="DataTypes\LoginObject.cs" />
     <Compile Include="DataTypes\RegisterDeviceObject.cs" />
     <Compile Include="DataTypes\RegistrationObject.cs" />
