--- a/NotiShareModel/NotiShareModel.csproj
+++ b/NotiShareModel/NotiShareModel.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="DataTypes\DeviceRegisterResult.cs" />
     <Compile Include="DataTypes\LoginObject.cs" />
+    <Compile Include="DataTypes\NotificationObject.cs" />
     <Compile Include="DataTypes\RegisterDeviceObject.cs" />
     <Compile Include="DataTypes\RegistrationObject.cs" />
     <Compile Include="HttpWorker\HttpWorker.cs" />
