saving unsaved files

--- a/NotiShareModel/NotiShareModel.csproj
+++ b/NotiShareModel/NotiShareModel.csproj
@@ -43,6 +43,11 @@
     <Compile Include="HttpWorker\HttpWorker.cs" />
     <Compile Include="HttpWorker\WebSockets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UrlResource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UrlResource.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -55,7 +60,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="UrlResource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>UrlResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
