--- a/NotiShare-Mobile/NotiShare/NotiShare.csproj
+++ b/NotiShare-Mobile/NotiShare/NotiShare.csproj
@@ -129,12 +129,13 @@
     <Compile Include="Fragments\PreferenceFragment.cs" />
     <Compile Include="Activity\MainActivity.cs" />
     <Compile Include="Helper\AppHelper.cs" />
-    <Compile Include="Helper\HashHelper.cs" />
+    <Compile Include="Helper\PreferenceKeys.cs" />
     <Compile Include="Helper\ValidationHelper.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ClipboardService.cs" />
     <Compile Include="Services\NotificationService.cs" />
+    <Compile Include="Ws\WebSockets.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GettingStarted.Xamarin" />
@@ -170,7 +171,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\NotiShareModel\NotiShareModel.csproj">
+    <ProjectReference Include="..\..\..\Model-Portable\NotiShareModel\NotiShareModel.csproj">
       <Project>{67f9d3a8-f71e-4428-913f-c37ae82cdb24}</Project>
       <Name>NotiShareModel</Name>
     </ProjectReference>
