--- a/NotiShare-Mobile/NotiShare/Properties/AndroidManifest.xml
+++ b/NotiShare-Mobile/NotiShare/Properties/AndroidManifest.xml
@@ -6,7 +6,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<application android:icon="@drawable/Icon" android:label="@string/ApplicationName">
+	<application android:icon="@drawable/Icon" android:label="@string/ApplicationName" android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
 		<service android:name="com.fezz.notishare.NotificationService" android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" android:exported="false">
 			<intent-filter>
 				<action android:name="android.service.notification.NotificationListenerService" />
